--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -53,6 +53,81 @@
     "        i += 1\n",
     "    total2 += occ * a"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q1=12940396350192, q2=106016735664498\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "def cartesian(n, q2=False):\n",
+    "    return list(product([0,1,2] if q2 else [0,1], repeat=n))\n",
+    "\n",
+    "inp = input(7, listify=True, sample=False)\n",
+    "\n",
+    "answers = [int(i.split(':')[0]) for i in inp]\n",
+    "numbers = [[int(j) for j in  i.split(':')[1].split()] for i in inp]\n",
+    "\n",
+    "seen = set()\n",
+    "a1 = a2 = 0\n",
+    "\n",
+    "for ans, nums in zip(answers, numbers):\n",
+    "    carts = cartesian(len(nums)-1)\n",
+    "    for cart in carts:\n",
+    "        combs = []\n",
+    "        comb = nums[0]\n",
+    "        for j in range(len(cart)):\n",
+    "            if cart[j]:\n",
+    "                comb *= nums[j+1]\n",
+    "            else:\n",
+    "                comb += nums[j+1]\n",
+    "        if comb == ans:\n",
+    "            seen.add(comb)\n",
+    "            a1 += comb\n",
+    "            break\n",
+    "\n",
+    "for ans, nums in zip(answers, numbers):\n",
+    "    if ans in seen:\n",
+    "        continue\n",
+    "    carts = cartesian(len(nums)-1, True)\n",
+    "    for cart in carts:\n",
+    "        comb = nums[0]\n",
+    "        too_big = False\n",
+    "        for j in range(len(cart)):\n",
+    "            if cart[j] == 2:\n",
+    "                comb = int(str(comb) + str(nums[j+1]))\n",
+    "            elif cart[j] == 1:\n",
+    "                comb *= nums[j+1]\n",
+    "            else:\n",
+    "                comb += nums[j+1]\n",
+    "            if comb>ans:\n",
+    "                too_big = True\n",
+    "                break\n",
+    "        if too_big:\n",
+    "            continue\n",
+    "        if comb == ans:\n",
+    "            a2 += comb\n",
+    "            break\n",
+    "\n",
+    "print(f'q1={a1}, q2={a1+a2}')"
+   ]
   }
  ],
  "metadata": {
