--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import *"
+    "from utils import *\n",
+    "from itertools import combinations\n",
+    "from math import gcd"
    ]
   },
   {
@@ -18,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "622 µs ± 15.4 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "627 µs ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +114,7 @@
     "        too_big = False\n",
     "        for j in range(len(cart)):\n",
     "            if cart[j] == 2:\n",
-    "                comb = int(str(comb) + str(nums[j+1]))\n",
+    "                comb = int(f\"{comb}{nums[j+1]}\")\n",
     "            elif cart[j] == 1:\n",
     "                comb *= nums[j+1]\n",
     "            else:\n",
@@ -127,6 +129,55 @@
     "            break\n",
     "\n",
     "print(f'q1={a1}, q2={a1+a2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.64 ms ± 12 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "m = input(8, matrixify=True, sample=False)\n",
+    "a1 = input(8, matrixify=True, sample=False)\n",
+    "a2 = input(8, matrixify=True, sample=False)\n",
+    "\n",
+    "signals = [i for i in m.unique() if i != '.']\n",
+    "\n",
+    "for sig in signals:\n",
+    "    for (x1, y1), (x2, y2) in combinations(m.get_locs(sig), 2):\n",
+    "        dx, dy = x1 - x2, y1 - y2\n",
+    "\n",
+    "        #q1\n",
+    "        if 0 <= x1 + dx < len(m) and 0 <= y1 + dy < len(m[0]):\n",
+    "            a1[x1 + dx][y1 + dy]='#'\n",
+    "        if 0 <= x2 - dx < len(m) and 0 <= y2 - dy < len(m[0]):\n",
+    "            a1[x2 - dx][y2 - dy]='#'\n",
+    "\n",
+    "        #q2\n",
+    "        dx, dy = int(dx / gcd(dx, dy)), int(dy / gcd(dx, dy))\n",
+    "        lbound, ubound = int((50-x2)/dx-1), int(-x1/dx+1)\n",
+    "        for i in range(lbound, ubound):\n",
+    "            if 0 <= x1 + i*dx < len(m) and 0 <= y1 + i*dy < len(m[0]):\n",
+    "                a2[x1 + i*dx][y1 + i*dy] = '#'\n",
+    "\n",
+    "f'q1={a1.count(\"#\")}, q2={a2.count(\"#\")}'"
    ]
   }
  ],
